--- a/styles/Layout.module.css
+++ b/styles/Layout.module.css
@@ -1,9 +1,10 @@
 .main {
     display: flex;
     background: var(--main-bg);
-    overflow-x: hidden;
+    overflow: hidden;
     width: 100%;
     max-width: 100vw;
+    height: calc(100vh - 55px);
 }
 
 .content {
